fix layout on narrow display

--- a/cscsite/assets/css/style.css
+++ b/cscsite/assets/css/style.css
@@ -27,7 +27,7 @@ h4.no-top-margin {
 }
 
 .container {
-  width: 960px !important;
+  width: 940px !important;
 }
 
 .container.inner {
@@ -197,6 +197,7 @@ html {
   position: absolute;
   bottom: 0;
   width: 100%;
+  min-width: 940px;
   margin-bottom: 0;
   background-color: #E6E6E6;
   border-top: 2px solid #9B9B9B;
@@ -204,6 +205,11 @@ html {
   color: #9B9B9B;
   margin-top: 75px;
 }
+
+/* .footer .container { */
+/*   border-top: 2px solid #9B9B9B; */
+/*   line-height: 55px; */
+/* } */
 
 .footer .social {
   background-color: #EDEDED;
@@ -231,6 +237,8 @@ html {
 .index-image-container {
   margin-top: -40px;
   background: url("") repeat-x;
+  width: 920px !important;
+  overflow-x: hidden;
 }
 
 .callout h1 {
